[tool.poetry]
name = "pymosp"
version = "0.4.3"
description = "Python Library to access MOSP."
authors = ["Cédric Bonhomme <cedric@cedricbonhomme.org>"]
license = "GPL-3.0-or-later"

readme = "README.md"

homepage = "https://github.com/CASES-LU/PyMOSP"
repository = "https://github.com/CASES-LU/PyMOSP"

keywords = ["json", "mosp", "security"]

classifiers=[
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Security",
    "Topic :: Internet"
]

include = [
    "CHANGELOG.md",
    "README.md",
    "AUTHORS.md",
    "COPYING",
    "bin/*"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/CASES-LU/PyMOSP/issues"
"Source" = "https://github.com/CASES-LU/PyMOSP"

[tool.poetry.scripts]
pymosp = "bin.pymosp:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
mypy = "^0.931"
types-requests = "^2.27.5"

[tool.poetry.dev-dependencies]
nose2 = "^0.10.0"
flake8 = "^3.9.0"
gitchangelog = "^3.0.4"
EditorConfig = "^0.12.3"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true

exclude = "old|tests"
