[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"


[project]
name = "PyMOSP"
version = "0.5.3"
description = "Python Library to access MOSP."
authors = [
    {name = "Cédric Bonhomme", email = "cedric@cedricbonhomme.org"}
]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["json", "mosp", "security"]

dynamic = ["classifiers"]

requires-python = ">=3.10,<4.0"
dependencies = [
    "requests (>=2.32.3)",
    "mypy (>=1.15.0)",
    "types-requests (>=2.32.0.20241016)",
]

[project.urls]
Homepage = "https://github.com/NC3-LU/PyMOSP"
Repository = "https://github.com/NC3-LU/PyMOSP"
Changelog = "https://github.com/NC3-LU/PyMOSP/blob/master/CHANGELOG.md"


[project.scripts]
pymosp = "bin.pymosp:main"


[tool.poetry]
requires-poetry = ">=2.0"
classifiers=[
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet"
]
include = [
    "CHANGELOG.md",
    "README.md",
    "AUTHORS.md",
    "COPYING",
    "bin/*"
]


[tool.poetry.group.dev.dependencies]
nose2 = "^0.15.1"
flake8 = "^7.1.0"
gitchangelog = "^3.0.4"
EditorConfig = "^0.12.3"
sphinx-book-theme = "^0.3.2"
sphinx-autodoc-typehints = "^1.18.3"
sphinx-multiversion = "^0.2.4"


[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true

exclude = "old|tests"
